// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component Snapshot Tests should match snapshot with different image properties 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="New Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="new-image.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel Component Snapshot Tests should match snapshot with large number of images 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="test-image.jpg"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic carousel__photo__stepper css-14xii3f-MuiPaper-root-MuiMobileStepper-root"
        style="--Paper-shadow: none;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":rc:"
          tabindex="0"
          type="button"
        >
          <svg
            data-testid="arrow-left-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
           
          Back
        </button>
        6
         / 
        10
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":rd:"
          tabindex="0"
          type="button"
        >
          Further
           
          <svg
            data-testid="arrow-right-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel Component Snapshot Tests should match snapshot with multiple images - first image 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="test-image.jpg"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic carousel__photo__stepper css-14xii3f-MuiPaper-root-MuiMobileStepper-root"
        style="--Paper-shadow: none;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id=":r6:"
          tabindex="-1"
          type="button"
        >
          <svg
            data-testid="arrow-left-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
           
          Back
        </button>
        1
         / 
        3
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":r7:"
          tabindex="0"
          type="button"
        >
          Further
           
          <svg
            data-testid="arrow-right-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel Component Snapshot Tests should match snapshot with multiple images - last image 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="test-image.jpg"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic carousel__photo__stepper css-14xii3f-MuiPaper-root-MuiMobileStepper-root"
        style="--Paper-shadow: none;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":ra:"
          tabindex="0"
          type="button"
        >
          <svg
            data-testid="arrow-left-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
           
          Back
        </button>
        3
         / 
        3
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          disabled=""
          id=":rb:"
          tabindex="-1"
          type="button"
        >
          Further
           
          <svg
            data-testid="arrow-right-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel Component Snapshot Tests should match snapshot with multiple images - middle image 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="test-image.jpg"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic carousel__photo__stepper css-14xii3f-MuiPaper-root-MuiMobileStepper-root"
        style="--Paper-shadow: none;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":r8:"
          tabindex="0"
          type="button"
        >
          <svg
            data-testid="arrow-left-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
           
          Back
        </button>
        2
         / 
        3
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary css-1ccsd5i-MuiButtonBase-root-MuiButton-root"
          id=":r9:"
          tabindex="0"
          type="button"
        >
          Further
           
          <svg
            data-testid="arrow-right-icon"
            height="24px"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6z"
              fill="currentColor"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="0"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel Component Snapshot Tests should match snapshot with single image 1`] = `
<div>
  <div
    class="carousel"
    data-testid="carousel"
  >
    <div
      class="carousel__photo"
    >
      <div
        class="photo"
      >
        <img
          alt="Test Image"
          class="photo__image"
          data-testid="image"
          loading="eager"
          src="test-image.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
